[gd_scene load_steps=5 format=3 uid="uid://b6v33c7vv42j7"]

[ext_resource type="Script" path="res://SequenceGame/Sequence.gd" id="1_108bh"]
[ext_resource type="PackedScene" uid="uid://cvlgpdko4fu0o" path="res://SequenceGame/PushPin.tscn" id="2_l4vms"]
[ext_resource type="PackedScene" uid="uid://p3cplwo6jood" path="res://SequenceGame/SessionStats.tscn" id="2_m77uc"]
[ext_resource type="PackedScene" uid="uid://cerk3e58an11t" path="res://SequenceGame/PinTest.tscn" id="4_5xs0h"]

[node name="Node2D" type="Node2D"]
position = Vector2(389, 232)
script = ExtResource("1_108bh")

[node name="SessionStats" parent="." instance=ExtResource("2_m77uc")]
position = Vector2(-598, -236)

[node name="Image8" type="ColorRect" parent="."]
offset_left = -91.0
offset_top = -170.0
offset_right = -5.0
offset_bottom = -85.0
metadata/_edit_use_anchors_ = true

[node name="Image7" type="ColorRect" parent="."]
offset_left = 197.0
offset_top = 125.0
offset_right = 283.0
offset_bottom = 210.0
metadata/_edit_use_anchors_ = true

[node name="Image6" type="ColorRect" parent="."]
offset_left = 233.0
offset_top = -96.0
offset_right = 319.0
offset_bottom = -11.0
metadata/_edit_use_anchors_ = true

[node name="Image5" type="ColorRect" parent="."]
offset_left = 74.0
offset_top = -64.0
offset_right = 160.0
offset_bottom = 21.0
metadata/_edit_use_anchors_ = true

[node name="Image4" type="ColorRect" parent="."]
offset_left = -49.0
offset_top = 85.0
offset_right = 37.0
offset_bottom = 170.0
metadata/_edit_use_anchors_ = true

[node name="Image3" type="ColorRect" parent="."]
offset_left = -354.0
offset_top = 106.0
offset_right = -268.0
offset_bottom = 191.0
metadata/_edit_use_anchors_ = true

[node name="Image2" type="ColorRect" parent="."]
offset_left = -183.0
offset_top = -11.0
offset_right = -97.0
offset_bottom = 74.0
metadata/_edit_use_anchors_ = true

[node name="Image" type="ColorRect" parent="."]
offset_left = -294.0
offset_top = -162.0
offset_right = -208.0
offset_bottom = -77.0
metadata/_edit_use_anchors_ = true

[node name="PushPin8" parent="." instance=ExtResource("2_l4vms")]
position = Vector2(233, 96)
scale = Vector2(0.2, 0.2)

[node name="PushPin7" parent="." instance=ExtResource("2_l4vms")]
position = Vector2(263, -130)
scale = Vector2(0.2, 0.2)

[node name="PushPin6" parent="." instance=ExtResource("2_l4vms")]
position = Vector2(102, -95)
scale = Vector2(0.2, 0.2)

[node name="PushPin5" parent="." instance=ExtResource("2_l4vms")]
position = Vector2(-19, 55)
scale = Vector2(0.2, 0.2)

[node name="PushPin4" parent="." instance=ExtResource("2_l4vms")]
position = Vector2(-155, -41)
scale = Vector2(0.2, 0.2)

[node name="PushPin3" parent="." instance=ExtResource("2_l4vms")]
position = Vector2(-58, -204)
scale = Vector2(0.2, 0.2)

[node name="PushPin2" parent="." instance=ExtResource("2_l4vms")]
position = Vector2(-323, 76)
scale = Vector2(0.2, 0.2)

[node name="PushPin1" parent="." instance=ExtResource("2_l4vms")]
position = Vector2(-261, -193)
scale = Vector2(0.2, 0.2)

[node name="TP1" parent="." instance=ExtResource("4_5xs0h")]
offset_left = -237.0
offset_top = -213.0
offset_right = 49.0
offset_bottom = 145.0
scale = Vector2(0.2, 0.2)

[node name="TP2" parent="." instance=ExtResource("4_5xs0h")]
offset_left = -299.0
offset_top = 55.0
offset_right = -13.0
offset_bottom = 413.0
scale = Vector2(0.2, 0.2)

[node name="TP3" parent="." instance=ExtResource("4_5xs0h")]
offset_left = -28.0
offset_top = -225.0
offset_right = 258.0
offset_bottom = 133.0
scale = Vector2(0.2, 0.2)

[node name="TP4" parent="." instance=ExtResource("4_5xs0h")]
offset_left = -138.0
offset_top = -63.0
offset_right = 148.0
offset_bottom = 295.0
scale = Vector2(0.2, 0.2)

[node name="TP5" parent="." instance=ExtResource("4_5xs0h")]
offset_left = 3.99997
offset_top = 32.0
offset_right = 290.0
offset_bottom = 390.0
scale = Vector2(0.2, 0.2)

[node name="TP6" parent="." instance=ExtResource("4_5xs0h")]
offset_left = 124.0
offset_top = -112.0
offset_right = 410.0
offset_bottom = 246.0
scale = Vector2(0.2, 0.2)

[node name="TP7" parent="." instance=ExtResource("4_5xs0h")]
offset_left = 283.0
offset_top = -149.0
offset_right = 569.0
offset_bottom = 209.0
scale = Vector2(0.2, 0.2)

[node name="TP8" parent="." instance=ExtResource("4_5xs0h")]
offset_left = 252.0
offset_top = 74.0
offset_right = 538.0
offset_bottom = 432.0
scale = Vector2(0.2, 0.2)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -100.0
offset_top = -318.0
offset_right = 55.0
offset_bottom = -236.0
color = Color(0.761363, 0.201599, 0.147851, 0.470588)

[node name="StartButton" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 13.0
offset_top = 9.0
offset_right = 143.0
offset_bottom = 75.0
text = "Start Trial"

[node name="ResponsePrompt" type="Label" parent="."]
visible = false
offset_left = -99.0
offset_top = -263.0
offset_right = 77.0
offset_bottom = -237.0
text = "Recreate the sequence"

[node name="current_trial" type="Label" parent="."]
offset_left = -429.0
offset_top = -261.0
offset_right = -389.0
offset_bottom = -238.0

[node name="sequence_type" type="Label" parent="."]
offset_left = 192.0
offset_top = -258.0
offset_right = 324.0
offset_bottom = -235.0

[node name="current_level" type="Label" parent="."]
offset_left = -389.0
offset_top = -100.0
offset_right = -349.0
offset_bottom = -77.0

[node name="delay_distraction" type="ColorRect" parent="."]
visible = false
offset_left = -375.0
offset_top = -225.0
offset_right = 391.0
offset_bottom = 231.0
color = Color(0, 0.313203, 0.313493, 1)

[node name="Label" type="Label" parent="delay_distraction"]
layout_mode = 0
offset_left = 329.0
offset_top = 214.0
offset_right = 417.0
offset_bottom = 237.0
text = "distraction."

[node name="trial_prompt" type="Label" parent="."]
offset_left = -191.0
offset_top = -263.0
offset_right = 114.0
offset_bottom = -171.0

[node name="session_over_display" type="Label" parent="."]
visible = false
offset_left = -141.0
offset_top = 257.0
offset_right = 99.0
offset_bottom = 280.0
text = "Session is Complete, Well Done"

[connection signal="pressed" from="ColorRect/StartButton" to="." method="_on_start_button_pressed"]
